--- a/index.html
+++ b/index.html
@@ -5,44 +5,50 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Junge&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
     <link href="/Zoe-Alex-married-/main.css" rel="stylesheet"> 
     <title>Zoe & Alex</title>
 </head>
 
 <body>
     <header class="cover">
-        <div class=first-text-wrapper">
-            <div class="first-text">
-                <div class="tagline">We're getting married!</div>
-                <h1>Zoe &amp; Alex</h1>
-                <span class="date">August 1, 2018</span>
-            </div>
+        <div class="first-text">
+            <div class="tagline">We're getting married!</div>
+            <h1>Zoe &amp; Alex</h1>
+            <span class="date">August 1, 2018</span>
         </div>
     </header>
     <main>
         <section class="locations">
             <h2>Locations</h2>
-            <div class="blurb">
-                <h3>Ceremony</h3>
-                <img src="https://orange.codeberryschool.com/content/images/project-assets/wedding-landing-ceremony.png"
-                    alt="Ceremony">
-                <div>St. Nicholas Church</div>
-                <div>2 Trinity Square, Budapest</div>
-            </div>
-            <div class="blurb">
-                <h3>Photos</h3>
-                <img src="https://orange.codeberryschool.com/content/images/project-assets/wedding-landing-photoshoot.png"
-                    alt="Photoshoot">
-                <div>Liberty Bastion</div>
-                <div>23 Wisdom Road, Budapest</div>
-            </div>
-            <div class="blurb">
-                <h3>Party</h3>
-                <img src="https://orange.codeberryschool.com/content/images/project-assets/wedding-landing-party.png"
-                    alt="Party">
-                <div>Heaven Lounge</div>
-                <div>14 Fairy Street, Budapest</div>
-            </div>
+            <div class="locations-flex">
+                <div class="blurb">
+                    <h3>Ceremony</h3>
+                    <img src="https://orange.codeberryschool.com/content/images/project-assets/wedding-landing-ceremony.png"
+                        alt="Ceremony">
+                    <div>St. Nicholas Church</div>
+                    <div>2 Trinity Square, Budapest</div>
+                </div>
+                <div class="blurb">
+                    <h3>Photos</h3>
+                    <img src="https://orange.codeberryschool.com/content/images/project-assets/wedding-landing-photoshoot.png"
+                        alt="Photoshoot">
+                    <div>Liberty Bastion</div>
+                    <div>23 Wisdom Road, Budapest</div>
+                </div>
+                <div class="blurb">
+                    <h3>Party</h3>
+                    <img src="https://orange.codeberryschool.com/content/images/project-assets/wedding-landing-party.png"
+                        alt="Party">
+                    <div>Heaven Lounge</div>
+                    <div>14 Fairy Street, Budapest</div>
+                </div>
+            </div>    
         </section>
         <section class="program">
             <h2>Program</h2>
@@ -67,42 +73,44 @@
         </section>
         <section class="faq">
             <h2>Questions & Answers</h2>
-            <div class="question-group">
-                <h3>Travel and accomodations</h3>
-                <p class="question">Will there be some kind of organized transfer?</p>
-                <p class="answer">No, we'll just meet at the church at 13:15.</p>
-                <p class="question">Where can I park?</p>
-                <p class="answer">Parking is free on the weekends in the 1st district. The locations are close to each
-                    other so you won't need your car.</p>
-                <p class="question">How can I get home at night?</p>
-                <p class="answer">The 916 bus is in service all night at the castle and it hits every major traffic hub
-                    in the city.</p>
-            </div>
-            <div class="question-group">
-                <h3>Food and festivities</h3>
-                <p class="question">I'd like to do some kind of surprise for you guys at the party. To whom should I
-                    talk about this?</p>
-                <p class="answer">Discuss it with Abigail Smith. Just drop her an email at <a
-                        href="mailto:abigail@awesomemail.com">abigail@awesomemail.com</a>.</p>
-                <p class="question">What should I wear? Do you have a dress code?</p>
-                <p class="answer">Wear what's comfortable to you. If it helps <a href="#" target="_blank">smart
-                        casual</a> / <a href="#" target="_blank">business casual</a> for the ladies and <a href="#"
-                        target="_blank">smart casual</a> / <a href="#" target="_blank">informal</a> for the gentlemen
-                    are perfect options.</p>
-                <p class="question">I would like some kind of special food (gluten-free, lactose-free, vegan etc.)</p>
-                <p class="answer">Drop us a line <a href="mailto:zoeandalex@awesomemail.com">here</a> and we'll find a
-                    way.</p>
-            </div>
-            <div class="question-group">
-                <h3>Other small stuff</h3>
-                <p class="question">I have a problem / question on the wedding day. With whom can I speak?</p>
-                <p class="answer">Jared Wright on this number: <a href="tel:+36300000000">+36 30 000 0000</a>.</p>
-                <p class="question">Can we bring kids?</p>
-                <p class="answer">Sure! We planned a whole toy / sweets corner for them.</p>
-                <p class="question">How do you feel about dogs? Can I bring mine?</p>
-                <p class="answer">We love dogs and you can absolutely bring yours. The Heaven Lounge is a dog-friendly
-                    place.</p>
-            </div>
+            <div class="faq-flex">
+                <div class="question-group">
+                    <h3>Travel and accomodations</h3>
+                    <p class="question">Will there be some kind of organized transfer?</p>
+                    <p class="answer">No, we'll just meet at the church at 13:15.</p>
+                    <p class="question">Where can I park?</p>
+                    <p class="answer">Parking is free on the weekends in the 1st district. The locations are close to each
+                        other so you won't need your car.</p>
+                    <p class="question">How can I get home at night?</p>
+                    <p class="answer">The 916 bus is in service all night at the castle and it hits every major traffic hub
+                        in the city.</p>
+                </div>
+                <div class="question-group">
+                    <h3>Food and festivities</h3>
+                    <p class="question">I'd like to do some kind of surprise for you guys at the party. To whom should I
+                        talk about this?</p>
+                    <p class="answer">Discuss it with Abigail Smith. Just drop her an email at <a
+                            href="mailto:abigail@awesomemail.com">abigail@awesomemail.com</a>.</p>
+                    <p class="question">What should I wear? Do you have a dress code?</p>
+                    <p class="answer">Wear what's comfortable to you. If it helps <a href="#" target="_blank">smart
+                            casual</a> / <a href="#" target="_blank">business casual</a> for the ladies and <a href="#"
+                            target="_blank">smart casual</a> / <a href="#" target="_blank">informal</a> for the gentlemen
+                        are perfect options.</p>
+                    <p class="question">I would like some kind of special food (gluten-free, lactose-free, vegan etc.)</p>
+                    <p class="answer">Drop us a line <a href="mailto:zoeandalex@awesomemail.com">here</a> and we'll find a
+                        way.</p>
+                </div>
+                <div class="question-group">
+                    <h3>Other small stuff</h3>
+                    <p class="question">I have a problem / question on the wedding day. With whom can I speak?</p>
+                    <p class="answer">Jared Wright on this number: <a href="tel:+36300000000">+36 30 000 0000</a>.</p>
+                    <p class="question">Can we bring kids?</p>
+                    <p class="answer">Sure! We planned a whole toy / sweets corner for them.</p>
+                    <p class="question">How do you feel about dogs? Can I bring mine?</p>
+                    <p class="answer">We love dogs and you can absolutely bring yours. The Heaven Lounge is a dog-friendly
+                        place.</p>
+                </div>
+            </div>    
         </section>
         <section class="contact">
             <h2>Contact</h2>
@@ -113,11 +121,9 @@
         </section>
     </main>
     <footer>
-        <div class="footer-wrapper">
             <p><small>Made with heart in Budapest ©2018 | Icons by <a href="http://www.flaticon.com/authors/becris"
                         title="Becris">Becris</a> (<a href="http://creativecommons.org/licenses/by/3.0/"
                         title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a>)</small></p>
-        </div>
     </footer>
 </body>
 
